Change book_service to authn_service
1.mv crates/book_service crates/authn_service
2.rg "book" -l -uu | xargs sed -i '' 's/book/authn/g' (This changes app::book)
3.rg "BOOK" -l -uu | xargs sed -i '' 's/BOOK/AUTHN/g'
4.rg "📖" -l -uu | xargs sed -i '' 's/📖/🔐/g'
5.Tweak model and app
